--- a/JiaoBaoYun-hb/html/micro-course/course-home1.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-home1.html
@@ -89,6 +89,15 @@
 				getAttendedClasses(toggleAttendedPart);
 				course_listnew.setListener();
 				addSlider();
+				window.addEventListener("infoChanged",function(){
+					if(document.getElementById("course-attended")){
+						document.getElementById("course-attended").querySelector(".mui-table-view").innerHTML="";
+					}
+					document.getElementById("course-all").querySelector(".mui-table-view").innerHTML="";
+					document.getElementById("course-all").info.pageIndex=1;
+					course_listnew.getData(1, document.getElementById("course-all").info, document.getElementById("course-all").querySelector(".mui-table-view"), course_listnew.setData);
+					getAttendedClasses(toggleAttendedPart);
+				})
 			});
 			/**
 			 * 滑动监听
