关闭退出的通知

--- a/JiaoBaoYun-hb/html/mine/setting.html
+++ b/JiaoBaoYun-hb/html/mine/setting.html
@@ -181,7 +181,7 @@
 												if(data.value) {
 													//退出登录
 													events.logOff();
-													events.infoChanged();
+//													events.infoChanged();
 													mui.fire(plus.webview.getWebviewById("index.html"), 'quit');
 													mui.back();
 												}
