--- a/JiaoBaoYun-hb/html/show/show-home1.html
+++ b/JiaoBaoYun-hb/html/show/show-home1.html
@@ -159,6 +159,7 @@
 						document.getElementById("show-attended").querySelector(".show-list").innerHTML = "";
 					}
 					document.getElementById("show-all").querySelector(".show-list").innerHTML = "";
+					mui(document.getElementById("show-all").querySelector(".mui-scroll-wrapper")).scroll().scrollTo(0,0);
 					document.getElementById("show-all").showCity.pageIndex = 1;
 					show_listnew.getShowList(document.getElementById("show-all").showCity, document.getElementById("show-all").querySelector(".show-list"), show_listnew.setShowList)
 					getFocusedPerson(toggleAttendedPart);
