--- a/JiaoBaoYun-hb/html/micro-course/course-home1.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-home1.html
@@ -91,9 +91,10 @@
 				addSlider();
 				window.addEventListener("infoChanged",function(){
 					console.log("*******微课界面出现两遍******")
-					if(document.getElementById("course-attended")){
-						document.getElementById("course-attended").querySelector(".mui-table-view").innerHTML="";
-					}
+//					if(document.getElementById("course-attended")){
+//						document.getElementById("course-attended").querySelector(".mui-table-view").innerHTML="";
+//					}
+					toggleAttendedPart(0);
 					document.getElementById("course-all").querySelector(".mui-table-view").innerHTML="";
 					document.getElementById("course-all").info.pageIndex=1;
 					course_listnew.getData(1, document.getElementById("course-all").info, document.getElementById("course-all").querySelector(".mui-table-view"), course_listnew.setData);
