--- a/JiaoBaoYun-hb/html/micro-course/course_details.html
+++ b/JiaoBaoYun-hb/html/micro-course/course_details.html
@@ -821,18 +821,18 @@
 						if(data.RspData.Data.length != 0) {
 							if(index == 1) {
 								//---假数据---start
-								data.RspData.Data[0].SecStatus = 1;
-								data.RspData.Data[0].EncType = 2;
-								data.RspData.Data[0].EncImgAddr = "http://qn-kfpb.jiaobaowang.net/jxq/Note/thumb/1495419146278732.png";
-								data.RspData.Data[0].EncAddr = "http://qn-kfpb.jiaobaowang.net/jxq/Note/thumb/1494318853754284.mp3";
-								data.RspData.Data[0].EncLen = 10;
-								data.RspData.Data[0].LikeNum = 10;
-								data.RspData.Data[1].SecStatus = 1;
-								data.RspData.Data[1].EncType = 1;
-								data.RspData.Data[1].EncImgAddr = "http://qn-kfpb.jiaobaowang.net/jxq/Note/thumb/1495419146278732.png";
-								data.RspData.Data[1].EncAddr = "http://qn-cspb.jiaobaowang.net/jbypc/pc/2650720170531145446.mp4";
-								data.RspData.Data[1].EncLen = 10;
-								data.RspData.Data[1].LikeNum = 10;
+//								data.RspData.Data[0].SecStatus = 1;
+//								data.RspData.Data[0].EncType = 2;
+//								data.RspData.Data[0].EncImgAddr = "http://qn-kfpb.jiaobaowang.net/jxq/Note/thumb/1495419146278732.png";
+//								data.RspData.Data[0].EncAddr = "http://qn-kfpb.jiaobaowang.net/jxq/Note/thumb/1494318853754284.mp3";
+//								data.RspData.Data[0].EncLen = 10;
+//								data.RspData.Data[0].LikeNum = 10;
+//								data.RspData.Data[1].SecStatus = 1;
+//								data.RspData.Data[1].EncType = 1;
+//								data.RspData.Data[1].EncImgAddr = "http://qn-kfpb.jiaobaowang.net/jxq/Note/thumb/1495419146278732.png";
+//								data.RspData.Data[1].EncAddr = "http://qn-cspb.jiaobaowang.net/jbypc/pc/2650720170531145446.mp4";
+//								data.RspData.Data[1].EncLen = 10;
+//								data.RspData.Data[1].LikeNum = 10;
 								//---假数据---end
 								showTopData(data.RspData.Data[0], wd);
 							}
