--- a/JiaoBaoYun-hb/html/micro-course/course_details.html
+++ b/JiaoBaoYun-hb/html/micro-course/course_details.html
@@ -454,6 +454,7 @@
 		<script type="text/javascript" src="../../js/utils/playutil.js"></script>
 		<script type="text/javascript" src="../../js/publicMicroClass.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
+		<script type="text/javascript" src="../../js/micro-course/coursedetails.js"></script>
 		<script type="text/javascript">
 			var main; //当webView
 			var sectionData = {
@@ -469,7 +470,7 @@
 
 			mui.init();
 			mui.plusReady(function() {
-				events.closeWaiting();
+				//events.closeWaiting();
 				var wd = events.showWaiting();
 				initData();
 				initControl();
@@ -503,7 +504,7 @@
 
 				//初始化音频播放区域
 				//				var width = plus.screen.resolutionWidth - 60;
-				//				var d = getAudioBorderPath(width);
+				//				var d = courseDetails.getAudioBorderPath(width);
 				//				console.log("top audio " + d);
 				//				//外框和背景
 				//				document.getElementById("audio_svg_border_fill").setAttribute("d", d);
@@ -623,7 +624,9 @@
 								commentContent: '',
 								replyId: allUserInfo.value[userId].utid,
 								replyNick: allUserInfo.value[userId].unick,
-								arrayIndex: ids[2]
+								arrayIndex: ids[2],
+								webId: main.id,
+								winId: "addCommont"
 							}
 							document.getElementById("audio").pause();
 							//console.log("data " + JSON.stringify(data));
@@ -664,7 +667,9 @@
 						userId: myStorage.getItem(storageKeyName.PERSONALINFO).utid,
 						userNick: myStorage.getItem(storageKeyName.PERSONALINFO).unick,
 						commentContent: '',
-						replyId: 0
+						replyId: 0,
+						webId: main.id,
+						winId: "addCommont"
 					}
 					document.getElementById("audio").pause();
 					events.openNewWindowWithData('course_addReply.html', data);
@@ -674,7 +679,13 @@
 
 				//顶部节次点赞按钮
 				mui('#section_top').on('tap', '.icon-zanzan1', function() {
+					var self = this;
+					if(events.judgeLoginMode(self)) { //判断是否是游客身份登录
+						return;
+					}
 					sectionLikeOrNot();
+					self.disabled = false;
+					jQuery(self).css("pointerEvents", "all");
 				});
 
 				//新增评论
@@ -707,98 +718,6 @@
 					}
 					showCommentsFirst(sectionData.value[e.detail.data.secId].Comments);
 				});
-			}
-
-			/**
-			 * 课程列表中的图片加载成功
-			 * @param {Object} img
-			 */
-			function onImageLoad(img) {
-				img.parentNode.style.height = parseInt(img.parentNode.offsetWidth * (3 / 4)) + "px";
-				if(img.offsetWidth > img.offsetHeight) { //宽的图片
-					img.style.height = img.parentNode.offsetHeight + "px";
-					img.style.width = "initial";
-					img.style.marginLeft = parseInt(img.offsetWidth * 0.5 - img.parentNode.offsetWidth * 0.5) * (-1) + 'px';
-				} else { //高的图片
-					img.style.marginTop = parseInt(img.offsetHeight * 0.5 - img.parentNode.offsetHeight * 0.5) * (-1) + 'px';
-				}
-				img.style.visibility = "visible";
-			}
-
-			/**
-			 * 课程列表中的图片加载失败
-			 * @param {Object} img
-			 */
-			function onImageError(img) {
-				img.style.visibility = "visible";
-				img.src = "../../image/utils/load-img-error.png"
-			}
-
-			/**
-			 * 视频播放按钮加载失败
-			 * @param {Object} img
-			 */
-			function onPlayError(img) {
-				img.parentNode.style.visibility = "visible";
-			}
-
-			/**
-			 * 视频播放按钮加载成功
-			 * @param {Object} img
-			 */
-			function onPlayLoad(img) {
-				img.parentNode.parentNode.style.height = parseInt(img.parentNode.parentNode.offsetWidth * (3 / 4)) + "px";
-				var width = img.parentNode.parentNode.offsetWidth;
-				var height = parseInt(width * (3 / 4));
-				img.parentNode.style.width = width + "px";
-				img.parentNode.style.height = height + "px";
-				img.parentNode.style.visibility = "visible";
-				img.style.marginLeft = parseInt((width - 40) / 2) + "px";
-				img.style.marginTop = parseInt((height - 40) / 2) + "px";
-			}
-
-			/**
-			 * 音频的外框
-			 * @param {Object} width
-			 */
-			function getAudioBorderPath(width) {
-				if(!width) {
-					width = width || plus.screen.resolutionWidth;
-					width = parseInt(width * 3 / 5);
-				}
-				var pathD = "M8 45 C13 40 15 38 15 25 L15 21 Q15 1 36 1 L" + width + " 1 Q" + (width + 20) + " 1 " + (width + 20) + " 21 Q" + (width + 20) + " 41 " + width + " 41 L30 41 Q15 41 12 43 L8 45 Z"
-				return pathD;
-			}
-
-			/**
-			 * 音视频显示的时间
-			 * @param {Object} time
-			 */
-			function getAudioTime(time) {
-				time = time || 0;
-				var strTime = "";
-				var hour = Math.floor(time / 3600);
-
-				if(hour > 0) {
-					if(hour < 10) {
-						strTime = "0" + hour + ':';
-					} else {
-						strTime = hour + ':';
-					}
-				}
-				var min = Math.floor((time - 3600 * hour) / 60);
-				if(min < 10) {
-					strTime = strTime + "0" + min + ':';
-				} else {
-					strTime = strTime + min + ':';
-				}
-				var sec = time - 3600 * hour - 60 * min;
-				if(sec < 10) {
-					strTime = strTime + "0" + sec;
-				} else {
-					strTime = strTime + sec;
-				}
-				return strTime;
 			}
 
 			/**
@@ -915,19 +834,19 @@
 						</div>\
 						<div class="section-list-img-div">\
 							<div class="section-image-play-div">\
-								<img src="../../image/utils/playvideo.png" class="section-image-play" onload="onPlayLoad(this);" onerror="onPlayError(this);" />\
+								<img src="../../image/utils/playvideo.png" class="section-image-play" onload="courseDetails.onPlayLoad(this);" onerror="courseDetails.onPlayError(this);" />\
 							</div>\
-							<div class="section-image-time">' + getAudioTime(data[i].EncLen) + '</div>\
-							<img src="' + data[i].EncImgAddr + '" class="section-list-img" onload="onImageLoad(this);" onerror="onImageError(this);" />\
+							<div class="section-image-time">' + courseDetails.getAudioTime(data[i].EncLen) + '</div>\
+							<img src="' + data[i].EncImgAddr + '" class="section-list-img" onload="courseDetails.onImageLoad(this);" onerror="courseDetails.onImageError(this);" />\
 						</div>';
 					} else if(data[i].EncType == 2) { //音频
 						ele.className = "mui-table-view-cell";
 						html = '<div class="section-title">' + data[i].SecName + '</div>\
 						<div>\
 							<svg class="section-list-audio">\
-								<path class="section-list-audio-border" d="' + getAudioBorderPath() + '" />\
+								<path class="section-list-audio-border" d="' + courseDetails.getAudioBorderPath() + '" />\
 								<path class="section-list-audio-icon" d="M30 18 A5 5 0 0 1 30 23 M35 14 A10 10 0 0 1 35 27 M40 10 A 15 15 0 0 1 40 31" />\
-								<text class="section-list-audio-time" x="60" y="26">' + getAudioTime(data[i].EncLen) + '</text>\
+								<text class="section-list-audio-time" x="60" y="26">' + courseDetails.getAudioTime(data[i].EncLen) + '</text>\
 							</svg>\
 						</div>\
 						<div class="section-info">上传时间 : ' + data[i].UpTime.split(" ")[0] + '</div>';
@@ -943,7 +862,7 @@
 									<div class="section-info">上传时间 : ' + data[i].UpTime.split(" ")[0] + '</div>\
 								</div>\
 								<div class="section-list-img-div">\
-									<img src="' + data[i].EncImgAddr + '" class="section-list-img" onload="onImageLoad(this);" onerror="onImageError(this);" />\
+									<img src="' + data[i].EncImgAddr + '" class="section-list-img" onload="courseDetails.onImageLoad(this);" onerror="courseDetails.onImageError(this);" />\
 								</div>';
 						}
 					}
@@ -968,12 +887,12 @@
 				var utids = [];
 				for(var i in comments) {
 					//评论节次用户
-					if(!allUserInfo.value[comments[i].UserId]) {
+					if(!allUserInfo.value[comments[i].UserId] && comments[i].UserId != 0) {
 						utids[utids.length] = comments[i].UserId;
 					}
 					//回复评论
 					for(var j in comments[i].Replys) {
-						if(!allUserInfo.value[comments[i].Replys[j].UserId]) {
+						if(!allUserInfo.value[comments[i].Replys[j].UserId] && comments[i].Replys[j].UserId != 0) {
 							utids[utids.length] = comments[i].Replys[j].UserId;
 						}
 					}
@@ -1028,29 +947,33 @@
 						html_zan = '<div data-type="notzan" class="mui-icon iconfont icon-zanzan1 section-comment-notzan">(' + data[i].LikeNum + ')</div>'
 					}
 					//评论节次
-					var html_0 = '<img data-type="view_cell" src="' + updateHeadImg(allUserInfo.value[data[i].UserId].uimg, 2) + '" class="section-comment-personal-headimage" />\
+					var html_0 = "";
+					//回复评论
+					var html_1 = "";
+					if(allUserInfo.value[data[i].UserId]) {
+						html_0 = '<img data-type="view_cell" src="' + updateHeadImg(allUserInfo.value[data[i].UserId].uimg, 2) + '" class="section-comment-personal-headimage" />\
 						' + html_zan + '\
 						<div class="mui-ellipsis section-comment-personal-name" data-type="view_cell">' + allUserInfo.value[data[i].UserId].unick + '</div>\
 						<div class="section-comment-content" data-type="view_cell">' + data[i].CommentContent + '</div>\
 						<div class="section-comment-info">回复' + data[i].Replys.length + '</div>\
 						<div class="mui-pull-right section-comment-info">' + data[i].CommentDate.split(" ")[0] + '</div>';
-					//回复评论
-					var html_1 = "";
-					for(var j in data[i].Replys) {
-						if(j == 0) {
-							html_1 = '<div data-type="reply" id="commont_reply_' + data[i].TabId + '" class="section-comment-reply">';
-						}
-						if(j == 5) {
-							html_1 = html_1 + '<div data-type="reply_all" class="section-comment-reply-all">查看全部>></div>';
-							break;
-						} else {
-							html_1 = html_1 + '<div id="commont_reply_' + data[i].TabId + '_' + data[i].Replys[j].TabId + '" data-type="comment_reply" data-UserId="' + data[i].Replys[j].UserId + '">\
+
+						for(var j in data[i].Replys) {
+							if(j == 0) {
+								html_1 = '<div data-type="reply" id="commont_reply_' + data[i].TabId + '" class="section-comment-reply">';
+							}
+							if(j == 5) {
+								html_1 = html_1 + '<div data-type="reply_all" class="section-comment-reply-all">查看全部>></div>';
+								break;
+							} else {
+								html_1 = html_1 + '<div id="commont_reply_' + data[i].TabId + '_' + data[i].Replys[j].TabId + '" data-type="comment_reply" data-UserId="' + data[i].Replys[j].UserId + '">\
 								<div class="section-comment-reply-name" data-type="comment_reply_cell">' + allUserInfo.value[data[i].Replys[j].UserId].unick + '</div><div\
 								class="section-comment-reply-info" data-type="comment_reply_cell">@</div><div \
 								class="section-comment-reply-name" data-type="comment_reply_cell">' + allUserInfo.value[data[i].Replys[j].ReplyId].unick + '</div>\
 								<div class="section-comment-reply-info" data-type="comment_reply_cell">:</div>\
 								<div class="section-comment-reply-content" data-type="comment_reply_cell">' + data[i].Replys[j].CommentContent + '</div>\
 							</div>';
+							}
 						}
 					}
 					if(html_1 != "") {
@@ -1124,14 +1047,14 @@
 			function showOrHiddenVideoAudio(type, fpath, time) {
 				console.log("showOrHiddenVideoAudio " + type + " " + fpath + " " + time);
 				var video = document.getElementById("video");
-				var audio=document.getElementById("audio");
+				var audio = document.getElementById("audio");
 				if(type == 1) { //视频
 					document.getElementById("scroll_wrapper").style.top = 44 + parseInt(plus.screen.resolutionWidth * 162 / 360) + "px";
 					document.getElementById("video_area").style.display = "inline";
 					document.getElementById("audio_area").style.display = "none";
 					video.src = fpath;
 					video.play();
-					audio.src="";
+					audio.src = "";
 					audio.pause();
 				} else if(type == 2) { //音频
 					document.getElementById("scroll_wrapper").style.top = "144px";
@@ -1139,7 +1062,7 @@
 					document.getElementById("audio_area").style.display = "flex";
 					video.src = "";
 					video.pause();
-					audio.src=fpath;
+					audio.src = fpath;
 					audio.play();
 				} else {
 					document.getElementById("scroll_wrapper").style.top = "45px";
@@ -1147,7 +1070,7 @@
 					document.getElementById("audio_area").style.display = "none";
 					video.src = "";
 					video.pause();
-					audio.src="";
+					audio.src = "";
 					audio.pause();
 				}
 			}
