--- a/JiaoBaoYun-hb/html/micro-course/history-records.html
+++ b/JiaoBaoYun-hb/html/micro-course/history-records.html
@@ -170,6 +170,10 @@
 				margin-right: 15px;
 			}
 
+			.section-list .mui-table-view-cell {
+				padding: 8px 15px;
+			}
+
 			.section-list .section-title {
 				margin-bottom: 11px;
 			}
@@ -205,9 +209,9 @@
 				font-size: 14px;
 			}
 
-			.section-list {
+			/*.section-list {
 				margin-top: 8px;
-			}
+			}*/
 
 			.section-list-li {
 				display: flex;
