--- a/JiaoBaoYun-hb/html/micro-course/course-home1.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-home1.html
@@ -182,7 +182,7 @@
 								self.endPullUpToRefresh();
 							} else {
 								self.endPullUpToRefresh();
-								mui(".mui-pull-loading")[0].innerHTML = "没有更多了";
+								freshConatiner.querySelector(".mui-pull-loading").innerHTML = "没有更多了";
 							}
 						}
 					}
