--- a/JiaoBaoYun-hb/html/mine/approval-apply.html
+++ b/JiaoBaoYun-hb/html/mine/approval-apply.html
@@ -26,6 +26,7 @@
 			<div class="mui-scroll">
 				<!--这里放置真实显示的DOM内容-->
 				<ul id="list-container" class="mui-table-view">
+					
 				</ul>
 			</div>
 		</div>
@@ -50,7 +51,7 @@
 					</div>
 				</form>
 			<div class="buttons">
-				<button id="btn-sure" type="button" class="mui-btn mui-btn-green btn-sure">确认</button>
+				<button id="btn-sure" type="button" class="mui-btn mui-btn-primary btn-sure">确认</button>
 				<!--<button  type="button" class="mui-btn mui-btn-green btn-cancel">取消</button>-->
 			</div>
 		</div>
