--- a/JiaoBaoYun-hb/html/mine/apply-group.html
+++ b/JiaoBaoYun-hb/html/mine/apply-group.html
@@ -31,6 +31,7 @@
 			<div class="mui-scroll">
 				<!--这里放置真实显示的DOM内容-->
 				<ul id="groups-container" class="mui-table-view">
+					
 				</ul>
 			</div>
 		</div>
@@ -57,7 +58,7 @@
 			</form>
 			<textarea id="extra-input" class="extra-input" rows="2" placeholder="请输入备注信息，最多20字"></textarea>
 			<div class="buttons">
-				<button id="btn-sure" type="button" class="mui-btn mui-btn-green btn-sure">确认</button>
+				<button id="btn-sure" type="button" class="mui-btn mui-btn-primary btn-sure">确认</button>
 				<!--<button  type="button" class="  -btn mui-btn-green btn-cancel">取消</button>-->
 			</div>
 		</div>
