--- a/JiaoBaoYun-hb/html/show/show-home1.html
+++ b/JiaoBaoYun-hb/html/show/show-home1.html
@@ -246,7 +246,7 @@
 								}, 1500);
 							} else {
 								self.endPullUpToRefresh();
-								mui(".mui-pull-loading")[0].innerHTML = "没有更多了";
+								freshConatiner.querySelector(".mui-pull-loading").innerHTML = "没有更多了";
 							}
 						}
 					}
