课程简介界面调整 发布展现界面调整

--- a/JiaoBaoYun-hb/html/micro-course/course-introduction.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-introduction.html
@@ -19,24 +19,23 @@
 		</header>
 		<div id="divContent" class="mui-content mui-hidden">
 			<div style="font-size: 16px;padding-left: 10px;padding-top: 15px;;font-weight: 700;">授课老师</div>
-			<img id="teaHeadImg" style="margin-top: 10px;margin-left: 20px;width: 40px;height: 40px;" src="../../image/utils/default_personalimage.png" onerror="onImageError(this);" />
-			<div style="border-color: #1db8f1;height: auto;border-width:1px ;border-style:dashed;margin-right: 20px;margin-left: 40px;margin-top: -27px;">
+			<img id="teaHeadImg" style="position: absolute;z-index: 2;background-color: #efeff4;top: 85px;left: 20px;width: 40px;height: 40px;" src="../../image/utils/default_personalimage.png" onerror="onImageError(this);" />
+			<div style="position: absolute;z-index: 1;border-color: #1db8f1;height: auto;border-width:1px ;border-style:dashed;right: 20px;left: 40px;top: 105px;">
 
 				<div style="padding:12px 10px;">
 					<p id="teaName" style="text-align: center;color: #323232;font-size: 15px;font-weight: 700;"></p><span id="teaInfo" style="text-align: center;color: #323232;font-size: 15px;">
 
 					</span>
 				</div>
-
 			</div>
-			<p style="background-color:#e4e4e4;height: 1px;margin-top: 15px;"></p>
+			<p style="background-color:#e4e4e4;height: 1px;margin-top: 115px;"></p>
 			<div>
-				<div style="font-size: 17px;padding-left: 10px;font-weight: 700;">课程介绍</div>
+				<div style="font-size: 16px;padding-left: 10px;font-weight: 700;">课程介绍</div>
 				<p id="courseInfo" style="padding-left: 40px;color: #323232;font-size: 15px;padding-right: 10px;padding-top: 10px;">
 				</p>
 			</div>
 			<p style="background-color:#e4e4e4;height: 1px;margin-top: 10px;"></p>
-			<p id="history" style="color: black;font-size: 17px;padding-left: 10px;padding-right: 10px;font-weight: 700;padding-top: 5px;">查看历史<span class="mui-icon iconfont icon-fanhui2" style="color:#b7b7b7;float: right;padding-top: 2px;"></span></p>
+			<p id="history" style="color: black;font-size: 16px;padding-left: 10px;padding-right: 10px;font-weight: 700;padding-top: 5px;">查看历史<span class="mui-icon iconfont icon-fanhui2" style="color:#b7b7b7;float: right;padding-top: 2px;"></span></p>
 			<p style="background-color:#e4e4e4;height: 1px;margin-top: 15px;"></p>
 			<div align="center" style="padding-top: 10px;">
 				<button id="focusBtn" class="mui-btn mui-btn-green btn-commit" style="background-color: #1db8F1;border-color:#1db8F1 ;border: 0;margin-left: 10px;margin-right: 10px;width: 95%;height: 40px;font-size: 16px;">关注</button>
