发布作业和做作业的图片预览功能

--- a/JiaoBaoYun-hb/html/homework/doHomework-stu.html
+++ b/JiaoBaoYun-hb/html/homework/doHomework-stu.html
@@ -58,7 +58,7 @@
 		<!--图片预览js-->
 		<script src="../../js/mui.zoom.js"></script>
 		<!--图片预览js-->
-		<script src="../../js/cloud/mui.previewimage.js"></script>
+		<script src="../../js/mui.previewimage.js"></script>
 		<!--作业接口-->
 		<script src="../../js/publicHomeworkProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
